aas-tools-deploy.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: aas-tools
  namespace: aas-test
spec:
  selector:
    matchLabels:
      app: aas-tools
  replicas: 3 # tells the deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: aas-tools
    spec:
      securityContext:
        runAsUser: 1001
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged
        ports:
        - containerPort: 8080
