aas-tools-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aas-tools-svc
  namespace: aas-tools
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: aas-tools
