aas-tools-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aas-tools
  namespace: aas-test
  annotations:
      kubernetes.io/ingress.class: nginx-red-internal
spec:
  rules:
  - host: application.itv.local.url
    http:
      paths:
      - backend:
          serviceName: aas-tools-svc
          servicePort: 80
  tls:
  - hosts:
    - application.itv.local.url
